manifests/base/pihole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole-primary
  labels:
    app.kubernetes.io/instance: primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: primary
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: primary
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      priorityClassName: high-priority
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: pihole
          image: pihole/pihole:2025.04.0
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 53
            timeoutSeconds: 1
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command: ['dig', '@127.0.0.1', 'cloudflare.com']
            timeoutSeconds: 1
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 53
              protocol: "TCP"
            - containerPort: 53
              protocol: "UDP"
            - containerPort: 80
              protocol: "TCP"
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-primary
  volumeClaimTemplates:
    - metadata:
        name: pihole-primary
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "synology-iscsi-retain-ssd"
        resources:
          requests:
            storage: 512Mi

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole-secondary
  labels:
    app.kubernetes.io/instance: secondary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: secondary
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: secondary
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      priorityClassName: high-priority
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: pihole
          image: pihole/pihole:2025.04.0
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 53
            timeoutSeconds: 1
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command: ['dig', '@127.0.0.1', 'cloudflare.com']
            timeoutSeconds: 1
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 53
              protocol: "TCP"
            - containerPort: 53
              protocol: "UDP"
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-secondary
  volumeClaimTemplates:
    - metadata:
        name: pihole-secondary
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "synology-iscsi-retain-ssd"
        resources:
          requests:
            storage: 512Mi
