manifests/base/pihole/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-http
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
spec:
  externalTrafficPolicy: Local  # Needed for pihole to get real client IPs
  ports:
    - port: 53
      protocol: UDP
      targetPort: 53
      name: dns-udp
    - port: 53
      protocol: TCP
      targetPort: 53
      name: dns-tcp
    - port: 67
      protocol: UDP
      targetPort: 67
      name: dhcp
  type: LoadBalancer
