manifests/base/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole.zmuda.pro
      secretName: pihole-tls
  rules:
    - host: pihole.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-http
                port:
                  number: 80
