manifests/base/pihole/pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              protocol: "TCP"
            - containerPort: 53
              protocol: "UDP"
            - containerPort: 67
              protocol: "UDP"
            - containerPort: 80
              protocol: "TCP"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole
            - mountPath: /etc/dnsmasq.d
              name: dnsmasq
      volumes:
        - name: pihole
          hostPath:
            path: /home/adzik/docker/etc-pihole
            type: Directory
        - name: dnsmasq
          hostPath:
            path: /home/adzik/docker/etc-dnsmasq.d
            type: Directory

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-http
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: pihole
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-dns
spec:
  ports:
    - port: 53
      protocol: UDP
      targetPort: 53
      name: dns-udp
    - port: 53
      protocol: TCP
      targetPort: 53
      name: dns-tcp
    - port: 67
      protocol: UDP
      targetPort: 67
      name: dhcp
  selector:
    app: pihole
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  tls:
    - hosts:
        - pihole.zmuda.pro
      secretName: pihole-tls
  rules:
    - host: pihole.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-http
                port:
                  number: 80
